# stolla

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
apps/web/: AGENTS.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  vercel.json
apps/web/src/app/: globals.css  landing.css  layout.tsx  page.tsx
apps/web/src/app/(landing)/: layout.tsx
apps/web/src/app/community/: page.tsx
apps/web/src/app/proposals/: page.tsx
apps/web/src/components/: Footer.tsx  Header.tsx
apps/web/src/components/landing/: AudienceSection.tsx  BentoGrid.tsx  CtaSection.tsx  DashboardPreview.tsx  FaqSection.tsx  FeaturesSection.tsx  GovernanceSection.tsx  HeroSection.tsx  HowItWorksSection.tsx  LandingChrome.tsx  LandingFooter.tsx  LandingHeader.tsx  LandingIcons.tsx  (+7 more)
apps/web/src/context/: WalletProvider.tsx
apps/web/src/hooks/: useLandingHeader.ts
apps/web/src/lib/: contracts.ts  landingImages.ts  scroll.ts  stellar.ts
contracts/: Cargo.toml  README.md
contracts/contracts/community-governor/: Cargo.toml
contracts/contracts/community-governor/src/: lib.rs  test.rs
contracts/contracts/community-nft/: Cargo.toml
contracts/contracts/community-nft/src/: lib.rs  test.rs
docs/: architecture.md  drips-wave-planned-issues.md  landing-page.md  prd.md
docs/adr/: 001-nft-voting-model.md  002-openzeppelin-compose.md  003-ipfs-metadata.md
scripts/: check-workspace-layout.mjs  clean-web-cache.mjs  deploy-testnet.sh  fund-testnet.sh
(+12 files in other folders)
